[add] introduction of me

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -28,6 +28,11 @@ hr {
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
+img {
+    max-width: 100%;
+    border: 1px solid #eee;
+}
+
 /*
  * Navbar
  */
